feat: Update index.html meta tags for improved SEO and social sharing

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="CaptiOCR - Real-time Screen Text Extraction"
-    />
-    <title>CaptiOCR</title>
+    <meta name="description" content="CaptiOCR - Combat meeting fatigue with real-time screen text extraction for meeting captions, transcription and summarization. Boost productivity and reduce stress from online meetings." />
+    <meta name="keywords" content="CaptiOCR, meeting fatigue, screen text extraction, meeting transcription, live captions, meeting notes, OCR software, meeting productivity, zoom fatigue, meeting summarization, meeting minutes" />
+    <meta property="og:title" content="CaptiOCR - Combat Meeting Fatigue with Real-Time Text Extraction" />
+    <meta property="og:description" content="CaptiOCR extracts text from live captions in real-time to fight meeting fatigue. Create automated meeting notes, transcripts, and summaries while maintaining privacy." />
+    <meta property="og:url" content="https://www.captiocr.com" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="CaptiOCR - Combat Meeting Fatigue with Real-Time Text Extraction" />
+    <meta name="twitter:description" content="Fight meeting fatigue with CaptiOCR's real-time text extraction. Create automated transcripts and summaries from any meeting platform." />
+    <link rel="canonical" href="https://www.captiocr.com" />
+    <title>CaptiOCR - Combat Meeting Fatigue with Real-Time Text Extraction</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
