feat: Add legal information pages including privacy policy, terms of use, and legal overview with navigation

--- a/web/public/legal/privacy.html
+++ b/web/public/legal/privacy.html
@@ -10,11 +10,16 @@
     <header>
         <h1>CaptiOCR Policies</h1>
     </header>
-    
+    <nav class="bg-gray-100 p-4 text-center">
+        <a href="index.html" class="mx-2 text-blue-600 hover:underline">Home</a> |
+        <a href="privacy.html" class="mx-2 text-blue-600 font-bold">Privacy</a> |
+        <a href="terms.html" class="mx-2 text-blue-600 hover:underline">Terms</a> |
+        <a href="legal.html" class="mx-2 text-blue-600 hover:underline">Legal</a>
+    </nav>
     <main>
         <section id="privacy-policy">
             <h2>Privacy Policy</h2>
-            <p><strong>Effective Date:</strong> [Insert Date]</p>
+            <p><strong>Effective Date:</strong> february 2025</p>
             <p>CaptiOCR is an offline, local-only application. It does not collect, store, or transmit any personal data. All OCR operations run locally, ensuring full user privacy.</p>
             <h3>How CaptiOCR Works</h3>
             <ul>
