--- a/web/public/legal/terms.html
+++ b/web/public/legal/terms.html
@@ -10,11 +10,16 @@
     <header>
         <h1>CaptiOCR Terms</h1>
     </header>
-    
+    <nav class="bg-gray-100 p-4 text-center">
+        <a href="index.html" class="mx-2 text-blue-600 hover:underline">Home</a> |
+        <a href="privacy.html" class="mx-2 text-blue-600 hover:underline">Privacy</a> |
+        <a href="terms.html" class="mx-2 text-blue-600 font-bold">Terms</a> |
+        <a href="legal.html" class="mx-2 text-blue-600 hover:underline">Legal</a>
+    </nav>
     <main>
         <section id="terms-of-use">
             <h2>Terms of Use</h2>
-            <p><strong>Effective Date:</strong> [Insert Date]</p>
+            <p><strong>Effective Date:</strong> february 2025</p>
             <p>By using CaptiOCR, you agree to the following terms:</p>
             <h3>License</h3>
             <p>CaptiOCR is an open-source project under the <strong>MIT License</strong>. You are free to use, modify, and distribute it within the bounds of this license.</p>
