fix: Update navigation links in legal documents to correct paths and improve SEO metadata

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="CaptiOCR - Combat meeting fatigue with real-time screen text extraction for meeting captions, transcription and summarization. Boost productivity and reduce stress from online meetings." />
-    <meta name="keywords" content="CaptiOCR, meeting fatigue, screen text extraction, meeting transcription, live captions, meeting notes, OCR software, meeting productivity, zoom fatigue, meeting summarization, meeting minutes" />
-    <meta property="og:title" content="CaptiOCR - Combat Meeting Fatigue with Real-Time Text Extraction" />
-    <meta property="og:description" content="CaptiOCR extracts text from live captions in real-time to fight meeting fatigue. Create automated meeting notes, transcripts, and summaries while maintaining privacy." />
+    <meta name="description" content="CaptiOCR - Free, privacy-focused tool for real-time screen text extraction. Capture captions, enhance focus, and create transcripts automatically. Boost productivity with this open-source solution." />
+    <meta name="keywords" content="CaptiOCR, screen text extraction, caption capture, free OCR software, live text extraction, digital productivity, transcription tool, open source OCR, privacy-focused transcription, captions to text, local text processing" />
+    <meta property="og:title" content="CaptiOCR - Free Real-Time Screen Text Extraction Tool" />
+    <meta property="og:description" content="CaptiOCR extracts text from on-screen captions in real-time. Create automated notes, transcripts, and summaries while maintaining complete privacy with this free, open-source tool." />
     <meta property="og:url" content="https://www.captiocr.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="CaptiOCR - Combat Meeting Fatigue with Real-Time Text Extraction" />
-    <meta name="twitter:description" content="Fight meeting fatigue with CaptiOCR's real-time text extraction. Create automated transcripts and summaries from any meeting platform." />
+    <meta name="twitter:title" content="CaptiOCR - Enhance Focus with Real-Time Text Extraction" />
+    <meta name="twitter:description" content="Reclaim your attention with CaptiOCR's free, privacy-focused text extraction. Create automated transcripts and summaries from any platform with on-screen captions." />
     <link rel="canonical" href="https://www.captiocr.com" />
-    <title>CaptiOCR - Combat Meeting Fatigue with Real-Time Text Extraction</title>
+    <title>CaptiOCR - Free Real-Time Screen Text Extraction Tool</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
