--- a/web/public/legal/legal.html
+++ b/web/public/legal/legal.html
@@ -12,7 +12,7 @@
     </header>
     
     <nav class="bg-gray-100 p-4 text-center">
-        <a href="index.html" class="mx-2 text-blue-600 hover:underline">Home</a> |
+        <a href="../index.html" class="mx-2 text-blue-600 hover:underline">Home</a> |
         <a href="privacy.html" class="mx-2 text-blue-600 hover:underline">Privacy</a> |
         <a href="terms.html" class="mx-2 text-blue-600 hover:underline">Terms</a> |
         <a href="legal.html" class="mx-2 text-blue-600 font-bold">Legal</a>
