feat: Add instructions page and update navigation links across legal documents

--- a/web/public/legal/privacy.html
+++ b/web/public/legal/privacy.html
@@ -12,9 +12,10 @@
     </header>
     <nav class="bg-gray-100 p-4 text-center">
         <a href="../index.html" class="mx-2 text-blue-600 hover:underline">Home</a> |
-        <a href="privacy.html" class="mx-2 text-blue-600 font-bold">Privacy</a> |
+        <a href="privacy.html" class="mx-2 text-blue-600 hover:underline">Privacy</a> |
         <a href="terms.html" class="mx-2 text-blue-600 hover:underline">Terms</a> |
-        <a href="legal.html" class="mx-2 text-blue-600 hover:underline">Legal</a>
+        <a href="legal.html" class="mx-2 text-blue-600 font-bold">Legal</a>
+        <a href="instructions.html" class="mx-2 text-blue-600 font-bold">Instructions</a>
     </nav>
     <main>
         <section id="privacy-policy">
