--- a/web/public/legal/legal.html
+++ b/web/public/legal/legal.html
@@ -16,6 +16,7 @@
         <a href="privacy.html" class="mx-2 text-blue-600 hover:underline">Privacy</a> |
         <a href="terms.html" class="mx-2 text-blue-600 hover:underline">Terms</a> |
         <a href="legal.html" class="mx-2 text-blue-600 font-bold">Legal</a>
+        <a href="instructions.html" class="mx-2 text-blue-600 font-bold">Instructions</a>
     </nav>
     
     <main>
