--- a/web/public/legal/terms.html
+++ b/web/public/legal/terms.html
@@ -13,8 +13,9 @@
     <nav class="bg-gray-100 p-4 text-center">
         <a href="../index.html" class="mx-2 text-blue-600 hover:underline">Home</a> |
         <a href="privacy.html" class="mx-2 text-blue-600 hover:underline">Privacy</a> |
-        <a href="terms.html" class="mx-2 text-blue-600 font-bold">Terms</a> |
-        <a href="legal.html" class="mx-2 text-blue-600 hover:underline">Legal</a>
+        <a href="terms.html" class="mx-2 text-blue-600 hover:underline">Terms</a> |
+        <a href="legal.html" class="mx-2 text-blue-600 font-bold">Legal</a>
+        <a href="instructions.html" class="mx-2 text-blue-600 font-bold">Instructions</a>
     </nav>
     <main>
         <section id="terms-of-use">
