--- a/web/public/legal/terms.html
+++ b/web/public/legal/terms.html
@@ -14,7 +14,7 @@
         <a href="../index.html" class="mx-2 text-blue-600 hover:underline">Home</a> |
         <a href="privacy.html" class="mx-2 text-blue-600 hover:underline">Privacy</a> |
         <a href="terms.html" class="mx-2 text-blue-600 hover:underline">Terms</a> |
-        <a href="legal.html" class="mx-2 text-blue-600 font-bold">Legal</a>
+        <a href="legal.html" class="mx-2 text-blue-600 font-bold">Legal</a> |
         <a href="instructions.html" class="mx-2 text-blue-600 font-bold">Instructions</a>
     </nav>
     <main>
