--- a/web/public/legal/instructions.html
+++ b/web/public/legal/instructions.html
@@ -15,8 +15,8 @@
         <a href="../index.html" class="mx-2 text-blue-600 hover:underline">Home</a> |
         <a href="privacy.html" class="mx-2 text-blue-600 hover:underline">Privacy</a> |
         <a href="terms.html" class="mx-2 text-blue-600 hover:underline">Terms</a> |
-        <a href="legal.html" class="mx-2 text-blue-600 font-bold">Legal</a> |
-        <a href="instructions.html" class="mx-2 text-blue-600 font-bold">Instructions</a>
+        <a href="legal.html" class="mx-2 text-blue-600 hover:underline">Legal</a> |
+        <a href="instructions.html" class="mx-2 text-blue-600 hover:underline">Instructions</a>
     </nav>
     
     <main>
