fix: Add effective date to CaptiOCR user guide instructions page

--- a/web/public/legal/instructions.html
+++ b/web/public/legal/instructions.html
@@ -22,6 +22,7 @@
     <main>
         <section id="instructions">
             <h2>CaptiOCR User Guide</h2>
+            <p><strong>Effective Date:</strong> february 2025</p>
             <p>Here's a complete guide on how to use CaptiOCR, a tool that captures and reads text from screen areas, particularly useful for captions in Teams live chats or similar programs.</p>
 
             <h3>Prerequisites</h3>
