fix: Update meta tags in index.html for improved SEO and clarity

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>CaptiOCR - Free Real-Time Screen Text Extraction Tool</title>
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="CaptiOCR - Free, privacy-focused tool for real-time screen text extraction. Capture captions, enhance focus, and create transcripts automatically. Boost productivity with this open-source solution." />
-    <meta name="keywords" content="CaptiOCR, screen text extraction, caption capture, free OCR software, live text extraction, digital productivity, transcription tool, open source OCR, privacy-focused transcription, captions to text, local text processing" />
+    <meta name="description" content="CaptiOCR - Free, privacy-focused tool for real-time screen text extraction. Capture captions, enhance focus, and create transcripts automatically. Boost productivity with this open-source solution. Copy live captions, save live transcription" />
+    <meta name="keywords" content="CaptiOCR, screen text extraction, caption capture, free OCR software, copy paste live text extraction, digital productivity, live transcription tool, open source OCR, privacy-focused transcription, captions to text, local text processing, save live captions, zoom, teams, webinar, meeting, google meet" />
     <meta property="og:title" content="CaptiOCR - Free Real-Time Screen Text Extraction Tool" />
     <meta property="og:description" content="CaptiOCR extracts text from on-screen captions in real-time. Create automated notes, transcripts, and summaries while maintaining complete privacy with this free, open-source tool." />
     <meta property="og:url" content="https://www.captiocr.com" />
@@ -14,7 +15,6 @@
     <meta name="twitter:title" content="CaptiOCR - Enhance Focus with Real-Time Text Extraction" />
     <meta name="twitter:description" content="Reclaim your attention with CaptiOCR's free, privacy-focused text extraction. Create automated transcripts and summaries from any platform with on-screen captions." />
     <link rel="canonical" href="https://www.captiocr.com" />
-    <title>CaptiOCR - Free Real-Time Screen Text Extraction Tool</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
