--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CaptiOCR - Free Real-Time Screen Text Extraction Tool</title>
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="CaptiOCR - Free, privacy-focused tool for real-time screen text extraction. Capture captions, enhance focus, and create transcripts automatically. Boost productivity with this open-source solution. Copy live captions, save live transcription" />
-    <meta name="keywords" content="CaptiOCR, screen text extraction, caption capture, free OCR software, copy paste live text extraction, digital productivity, live transcription tool, open source OCR, privacy-focused transcription, captions to text, local text processing, save live captions, zoom, teams, webinar, meeting, google meet" />
+    <meta name="description" content="CaptiOCR - real-time live captions text extraction. Capture captions, enhance focus, and create transcripts automatically from live captions. Boost productivity with this open-source solution. Copy live captions, save live transcription, privacy-focused" />
+    <meta name="keywords" content="Captions on screen text extraction, caption capture, OCR software, copy paste live text extraction, digital productivity, live transcription tool, open source OCR, privacy-focused transcription, captions to text, local text processing, save live captions, zoom, teams, webinar, meeting, google meet" />
     <meta property="og:title" content="CaptiOCR - Free Real-Time Screen Text Extraction Tool" />
     <meta property="og:description" content="CaptiOCR extracts text from on-screen captions in real-time. Create automated notes, transcripts, and summaries while maintaining complete privacy with this free, open-source tool." />
     <meta property="og:url" content="https://www.captiocr.com" />
@@ -14,6 +14,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="CaptiOCR - Enhance Focus with Real-Time Text Extraction" />
     <meta name="twitter:description" content="Reclaim your attention with CaptiOCR's free, privacy-focused text extraction. Create automated transcripts and summaries from any platform with on-screen captions." />
+    
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    
     <link rel="canonical" href="https://www.captiocr.com" />
   </head>
   <body>
