fix: Update title and meta tags in index.html for improved clarity and SEO in CaptiOCR description

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>CaptiOCR - Free Real-Time Screen Text Extraction Tool</title>
+    <title>CaptiOCR - Real-Time Screen Live Captions Saving Tool</title>
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="CaptiOCR - real-time live captions reader text extraction. Capture captions, enhance focus, and create transcripts automatically from live captions. Boost productivity with this open-source solution. Copy live captions, save live transcription, privacy-focused" />
-    <meta name="keywords" content="Captions on screen text extraction, Live captions reader, OCR software, copy paste live text extraction, digital productivity, live transcription tool, open source OCR, privacy-focused transcription, captions to text, local text processing, save live captions, zoom, teams, webinar, meeting, google meet" />
+    <meta name="description" content="Generate real-time captions and automatic transcripts with CaptiOCR. Boost productivity while protecting your privacy." />
+    <meta name="keywords" content="CaptiOCR, real-time captions, automatic transcription, open-source OCR, live text extraction, copy live captions, digital productivity, privacy-focused, save transcripts, webinar, meeting, Zoom, Teams, Google Meet" />
     <meta property="og:title" content="CaptiOCR - Free Real-Time Screen Text Extraction Tool" />
     <meta property="og:description" content="CaptiOCR extracts text from on-screen captions in real-time. Create automated notes, transcripts, and summaries while maintaining complete privacy with this free, open-source tool." />
     <meta property="og:url" content="https://www.captiocr.com" />
