fix: Add transcribers comparison link to legal pages and update title and content in transcriber-comparison.html for clarity and SEO

--- a/web/public/legal/privacy.html
+++ b/web/public/legal/privacy.html
@@ -16,6 +16,7 @@
         <a href="terms.html" class="mx-2 text-blue-600 hover:underline">Terms</a> |
         <a href="legal.html" class="mx-2 text-blue-600 hover:underline">Legal</a> |
         <a href="instructions.html" class="mx-2 text-blue-600 hover:underline">Instructions</a>
+        <a href="transcriber-comparison.html" class="mx-2 text-blue-600 hover:underline">Transcribers Comparison</a>       
     </nav>
     <main>
         <section id="privacy-policy">
