--- a/web/public/legal/instructions.html
+++ b/web/public/legal/instructions.html
@@ -18,7 +18,7 @@
         <a href="privacy.html" class="mx-2 text-blue-600 hover:underline">Privacy</a> |
         <a href="terms.html" class="mx-2 text-blue-600 hover:underline">Terms</a> |
         <a href="legal.html" class="mx-2 text-blue-600 hover:underline">Legal</a> |
-        <a href="instructions.html" class="mx-2 text-blue-600 hover:underline">Instructions</a>
+        <a href="instructions.html" class="mx-2 text-blue-600 hover:underline">Instructions</a> |
         <a href="transcriber-comparison.html" class="mx-2 text-blue-600 hover:underline">Transcribers Comparison</a>       
     </nav>
     
